--- a/spring-boot-server/src/main/resources/application.properties
+++ b/spring-boot-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/testdb
+spring.datasource.url= jdbc:mysql://localhost:3306/tools
 spring.datasource.username=root
 spring.datasource.password=password@2020
 spring.jpa.hibernate.ddl-auto=update
