--- a/spring-boot-server/src/main/resources/application.properties
+++ b/spring-boot-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/tools
 spring.datasource.username=root
 spring.datasource.password=password@2020
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.jdbcUrl=jdbc:mysql://127.0.0.1:3306/database
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
