--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/tools
+spring.datasource.url= jdbc:mysql://host.docker.internal:${db_port}/${db_name}
+#spring.datasource.url= jdbc:mysql://localhost:3306/tools
 spring.datasource.username=root
-spring.datasource.password=password@2020
+spring.datasource.password=${db_password}
+#spring.datasource.password=password@2020
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.jdbcUrl=jdbc:mysql://127.0.0.1:3306/database
+#spring.datasource.jdbcUrl=jdbc:mysql://127.0.0.1:3306/database
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
